--- a/Syncro.Client/syncro-frontend/src/Styles/Login.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/Login.css
@@ -619,3 +619,11 @@ footer a:focus::after {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
+
+#root {    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
