--- a/Syncro.Client/syncro-frontend/src/Styles/Chat.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/Chat.css
@@ -363,3 +363,30 @@ body {
 .sending {
   animation: pulse 0.6s ease infinite;
 }
+
+.sk-class {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 25%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  flex-shrink: 0;
+}
+
+.sk-class img:hover {
+  transition: 0.5s ease;
+  width: 45px;
+  height: 45px;
+}
+
+.sk-class img {
+  width: 38px;
+  height: 38px;
+  transition: all 0.5s ease;
+}
