--- a/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
@@ -48,10 +48,20 @@ body {
     width: 100%;
 }
 
+.group-chats-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 72px;
+}
+
 .group-chats {
     justify-items: center;
+    flex: 1;
     padding: 0 5px;
     width: 72px;
+    overflow-y: auto;
 }
 
 .personal-chats {
@@ -162,6 +172,15 @@ body {
     align-items: center;
     height: 50px;
     width: 50px;
+}
+
+.profile-button {
+    flex-shrink: 0;
+    display: flex;
+    font-size: large;
+    align-items: center;
+    height: 72px;
+    width: 72px;
 }
 
 .friends-list {
