--- a/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     align-items: baseline;
     animation: none;
-    color: #ffffff;
+    color: #151838;    
+    background-color: #151838;
 }
 
 .main-page {
@@ -44,7 +45,7 @@ body {
     flex-direction: column;
     position: relative;
     background-color: #151838;
-    outline: 1px solid #D5D6DA;
+    outline: 1px solid #87888a09;
     width: 100%;
 }
 
@@ -67,7 +68,7 @@ body {
 .personal-chats {
     justify-items: center;
     width: 300px;
-    outline: 1px solid #D5D6DA;
+    outline: 1px solid #87888a09;
     border-radius: 10px 0 0 0;
     flex-shrink: 0;
     overflow: hidden;
@@ -75,7 +76,7 @@ body {
 
 .chat-separator {
     border-radius: 1px;
-    background-color: #D5D6DA;
+    background-color: #87888a09;
     height: 2px;
     width: 32px;
     margin: 10px 0;
@@ -87,7 +88,7 @@ body {
     width: 100%;
     height: 5%;
     padding: 0 10px;
-    outline: 1px solid #D5D6DA;
+    outline: 1px solid #87888a09;
     border-radius: 10px 0 0 0;
 }
 
@@ -112,7 +113,7 @@ body {
     height: 5%;
     flex-direction: row;
     padding: 8px 8px 8px 23px;
-    outline: 1px solid #D5D6DA;
+    outline: 1px solid #87888a09;
 }
 
 .button-friends-status {
@@ -141,6 +142,7 @@ body {
 .main-logo {
     height: 50px;
     width: 50px;
+    margin-top: 10px;
     background-color: #3B82F6;
     border: 1px solid #1A2438;
     border-radius: 10px;
@@ -224,7 +226,7 @@ body {
     height: 60px;
     padding: 0 12px;
     opacity: 1;
-    margin: 4px 0;
+    margin: 5px 20px 0 5px;
     background-color: #1E293B;
     align-items: center;
     gap: 12px;
@@ -240,7 +242,7 @@ body {
 .friend-item:hover {
     background: #23244a;
     box-shadow: 0 2px 8px #3b82f6;
-    transform: scale(0.97);
+    transform: scale(1.01);
     z-index: 2;
 }
 
@@ -257,6 +259,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 5px 8px;
     gap: 7px;
     cursor: pointer;
 }
