--- a/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
@@ -21,6 +21,7 @@ body {
     height: 3%;
     justify-content: center;
     align-items: center;
+    border: none;
 }
 
 .body-container {
@@ -28,6 +29,7 @@ body {
     height: 100%;
     width: 100%;
     flex-direction: row;
+    border: none;
 }
 
 .sidebar-container {
@@ -38,6 +40,7 @@ body {
     background-color: #07081C;
     flex-shrink: 0;
     min-width: 372px;
+    border: none;
 }
 
 .friends {
@@ -45,7 +48,8 @@ body {
     flex-direction: column;
     position: relative;
     background-color: #151838;
-    outline: 1px solid #87888a09;
+    outline: none;
+    border: none;
     width: 100%;
 }
 
@@ -68,10 +72,12 @@ body {
 .personal-chats {
     justify-items: center;
     width: 300px;
-    outline: 1px solid #87888a09;
-    border-radius: 10px 0 0 0;
+    outline: none;
+    border: none;
     flex-shrink: 0;
     overflow: hidden;
+    box-shadow: 10px 0 1vw 0.01vw #07081C;
+    z-index: 1;
 }
 
 .chat-separator {
@@ -88,8 +94,8 @@ body {
     width: 100%;
     height: 5%;
     padding: 0 10px;
-    outline: 1px solid #87888a09;
-    border-radius: 10px 0 0 0;
+    outline: none;
+    border: none;
 }
 
 .button-search-pm {
@@ -113,7 +119,8 @@ body {
     height: 5%;
     flex-direction: row;
     padding: 8px 8px 8px 23px;
-    outline: 1px solid #87888a09;
+    outline: none;
+    border: none;
 }
 
 .button-friends-status {
