--- a/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     align-items: baseline;
     animation: none;
-    color: #151838;    
+    color: #151838;
     background-color: #151838;
 }
 
@@ -75,27 +75,16 @@ body {
     outline: none;
     border: none;
     flex-shrink: 0;
-    overflow: hidden;
-    box-shadow: 10px 0 1vw 0.01vw #07081C;
+    box-shadow: 6px 0 1vw 0.01vw #07081C;
     z-index: 1;
 }
 
 .chat-separator {
     border-radius: 1px;
-    background-color: #87888a09;
+    background-color: #9c9da009;
     height: 2px;
     width: 32px;
-    margin: 10px 0;
-}
-
-.search-pm {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 5%;
-    padding: 0 10px;
-    outline: none;
-    border: none;
+    margin: 7px;
 }
 
 .button-search-pm {
@@ -103,7 +92,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: large;
-    height: 60%;
+    height: 100%;
     width: 100%;
     border: none;
     border-radius: 15px;
@@ -121,6 +110,10 @@ body {
     padding: 8px 8px 8px 23px;
     outline: none;
     border: none;
+}
+
+.friends-nav .input-container {
+    padding: 10px;
 }
 
 .button-friends-status {
@@ -202,7 +195,7 @@ body {
 .input-container {
     display: flex;
     flex-grow: 1 1 auto;
-    padding: 10px 30px;
+    padding: 5px 20px 10px 5px;
 }
 
 .input-box {
@@ -309,6 +302,15 @@ body {
     flex-direction: column;
     width: 100%;
     padding: 10px;
+    overflow: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.pc-list::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
 }
 
 .pc-item {
@@ -437,7 +439,7 @@ body {
 .friend-info {
     margin-top: 12px;
     padding: 12px;
-    background: rgba(255,255,255,0.05);
+    background: rgba(255, 255, 255, 0.05);
     border-radius: 12px;
 }
 
