--- a/Syncro.Client/syncro-frontend/src/Styles/Chat.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/Chat.css
@@ -123,10 +123,6 @@ body {
 }
 
 .friends-nav {
-  display: flex;
-  align-items: center;
-  padding: 12px 16px;
-  border-bottom: 1px solid #2D3748;
   gap: 8px;
 }
 
@@ -380,10 +376,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: transparent;
   width: 48px;
   height: 48px;
   border-radius: 25%;
-  background-color: #3B82F6;
   border: none;
   color: white;
   cursor: pointer;
@@ -392,17 +388,17 @@ body {
 }
 
 .send-button:hover {
-  background-color: #2563EB;
-  transform: scale(1.05);
+  background-color: transparent;
+  transform: scale(1.2);
 }
 
 .send-button:active {
-  background-color: #1D4ED8;
-  transform: scale(0.98);
+  background-color: transparent;
+  transform: scale(1.05);
 }
 
 .send-button:disabled {
-  background-color: #4A5568;
+  background-color: transparent;
   cursor: not-allowed;
   transform: none;
 }
@@ -410,7 +406,6 @@ body {
 .send-button svg {
   width: 24px;
   height: 24px;
-  fill: currentColor;
 }
 
 @keyframes pulse {
@@ -440,22 +435,19 @@ body {
   border-radius: 25%;
   background-color: transparent;
   border: none;
-  color: white;
   cursor: pointer;
-  transition: all 0.2s ease;
-  flex-shrink: 0;
 }
 
 .sk-class img:hover {
-  transition: 0.5s ease;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
 }
 
 .sk-class img {
-  width: 38px;
-  height: 38px;
-  transition: all 0.5s ease;
+  width: 35px;
+  height: 35px;
+  transition: all 0.15s;
+  filter: invert(30%) sepia(55%) saturate(571%) hue-rotate(128deg) brightness(97%) contrast(30%);
 }
 
 .media-preview img {
@@ -500,11 +492,13 @@ video::-webkit-media-controls-panel {
 }
 
 .call-button {
+  display: flex;
   background: #4a8cff;
   color: white;
   border: none;
   border-radius: 8px;
   padding: 8px 16px;
+  margin: 2px;
   cursor: pointer;
   transition: 0.2s;
 }
@@ -634,7 +628,7 @@ video::-webkit-media-controls-panel {
 
 .video-call-container {
   position: relative;
-  height: 40%;
+  height: 100%;
   background-color: #1A2438;
   color: #fff;
   display: flex;
@@ -967,5 +961,35 @@ video::-webkit-media-controls-panel {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+.call-state-img,
+.loading-state-img {
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.call-state-img {
+  filter: invert(70%) sepia(85%) saturate(771%) hue-rotate(138deg) brightness(87%) contrast(95%);
+}
+
+.send-state-img {
+  filter: invert(70%) sepia(85%) saturate(771%) hue-rotate(138deg) brightness(87%) contrast(95%);
+}
+
+
+.loading-state-img {
+  filter: invert(61%) sepia(90%) saturate(378%) hue-rotate(360deg) brightness(97%) contrast(91%);
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
   }
 }
