--- a/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
+++ b/Syncro.Client/syncro-frontend/src/Styles/MainPage.css
@@ -107,7 +107,7 @@ body {
     width: 100%;
     height: 5%;
     flex-direction: row;
-    padding: 8px 8px 8px 23px;
+    padding: 8px 8px 8px 30px;
     outline: none;
     border: none;
 }
@@ -147,6 +147,9 @@ body {
     border: 1px solid #1A2438;
     border-radius: 10px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .group-chat-list {
@@ -216,8 +219,17 @@ body {
 
 .search-icon {
     align-content: center;
+    height: 35px;
+    width: 35px;
+    filter: invert(60%) sepia(85%) saturate(771%) hue-rotate(138deg) brightness(87%) contrast(95%);
+}
+
+.search-icon-friend {
+    align-content: center;
     height: 25px;
     width: 25px;
+    margin-right: 7px;
+    filter: invert(60%) sepia(85%) saturate(771%) hue-rotate(138deg) brightness(87%) contrast(95%);
 }
 
 .friend-item {
